# chemperium

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini  train.py
.github/workflows/: test.yaml
chemperium/: __init__.py  inp.py
chemperium/data/: load_data.py  load_test_data.py  parse_csv.py
chemperium/features/: featurize.py  find_h_bonds.py
chemperium/model/: mpnn.py
chemperium/molecule/: batch.py  graph.py
chemperium/postprocessing/: uncertainty_quantification.py
chemperium/training/: evaluate.py  predict.py  represent.py  run.py
docs/source/: conf.py  index.rst
docs/source/api/: chemperium.data.rst  chemperium.features.rst  chemperium.model.rst  chemperium.molecule.rst  chemperium.postprocessing.rst  chemperium.rst  chemperium.training.rst  modules.rst
notebooks/: demo.ipynb  test_chemperium.ipynb  train_model.ipynb
scripts/: hyperopt.py
src/chemperium/: __about__.py  __init__.py  inp.py
src/chemperium/data/: load_data.py  load_test_data.py  parse_csv.py
src/chemperium/features/: calc_features.py  featurize.py  find_h_bonds.py  fingerprint.py
src/chemperium/gaussian/: data.py  feature_vector.py  histogram.py  molecular_geometry.py  utils.py  zmatrix.py
src/chemperium/model/: ffn.py  mpnn.py
src/chemperium/molecule/: batch.py  graph.py
src/chemperium/postprocessing/: metrics.py  plots.py  thermodynamics.py  uncertainty_quantification.py
src/chemperium/training/: evaluate.py  (+5 more)
test_data/: test_example.csv
tests/: test_import.py  test_predict.py  test_train.py  test_zmatrix.py
(+10 files in other folders)
