[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chemperium"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
description = "Chemperium package"
dependencies = [
    "rdkit",
    "pandas",
    "scikit-learn",
    "numpy",
    "tqdm",
    "tensorflow",
    "scipy",
]
authors = [
    {name = "Maarten R. Dobbelaere", email = "mrodobbe.dobbelaere@ugent.be"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
